# public

haskell/: haskell-in-bash.sh
haskell/FailT-blogpost/: CHANGELOG.md  FailT-blogpost.cabal  README.md  stack.yaml
haskell/FailT-blogpost/src/: Lib.hs
haskell/FailT-blogpost/src/FailT/: Array.hs  ExceptT.hs  Vector.hs
haskell/stackoverflow/errort-is-deprecated-but-exceptt-doesnt-fit/: CHANGELOG.md  README.md  errort-is-deprecated-but-exceptt-doesnt-fit.cabal  stack.yaml
haskell/stackoverflow/errort-is-deprecated-but-exceptt-doesnt-fit/src/: Lib.hs
haskell/stackoverflow/is-there-any-newtype-for-either-string/: CHANGELOG.md  README.md  is-there-any-newtype-for-either-string.cabal
haskell/stackoverflow/is-there-any-newtype-for-either-string/src/: Lib.hs
haskell/stackoverflow/parallelize-computation-of-mutable-vector-in-st/: CHANGELOG.md  README.md  parallelize-computation-of-mutable-vector-in-st.cabal  stack.yaml
haskell/stackoverflow/parallelize-computation-of-mutable-vector-in-st/app/: Main.hs
haskell/stackoverflow/parallelize-computation-of-mutable-vector-in-st/bench/: Bench.hs
haskell/stackoverflow/parallelize-computation-of-mutable-vector-in-st/src/: Massiv.hs  Vector.hs
haskell/stackoverflow/why-parallelizing-this-code-yeilds-almost-no-performance-improvement-on-six-core/: CHANGELOG.md  README.md  stack.yaml  sudoku.txt  why-parallelizing-this-code-yeilds-almost-no-performance-improvement-on-six-core.cabal
haskell/stackoverflow/why-parallelizing-this-code-yeilds-almost-no-performance-improvement-on-six-core/app/: Main.hs
haskell/stackoverflow/why-parallelizing-this-code-yeilds-almost-no-performance-improvement-on-six-core/bench/: Bench.hs
haskell/stackoverflow/why-parallelizing-this-code-yeilds-almost-no-performance-improvement-on-six-core/src/: Lib.hs
