name:                FailT-blogpost
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/FailT-blogpost#readme>
homepage:            https://github.com/lehins/FailT-blogpost
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2022 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.4
                   , GHC == 9.4.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib

  other-modules:
  build-depends:       FailT
                     , aeson
                     , array
                     , attoparsec
                     , base >= 4.8 && < 5
                     , binary
                     , mtl
                     , rio
                     , scientific
                     , time
                     , transformers

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints



source-repository head
  type:     git
  location: https://github.com/lehins/FailT-blogpost
