name:                parallelize-computation-of-mutable-vector-in-st
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/parallelize-computation-of-mutable-vector-in-st#readme>
homepage:            https://github.com/lehins/parallelize-computation-of-mutable-vector-in-st
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2023 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.4
                   , GHC == 9.4.4

library
  hs-source-dirs:      src
  exposed-modules:     Vector
                     , Massiv

  other-modules:
  build-depends:       base >= 4.8 && < 5
                     , async
                     , vector
                     , vector-strategies
                     , massiv
                     , monad-par
                     , parallel
                     , primitive
                     , scheduler
                     , unliftio

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints


executable parallelize-computation-of-mutable-vector-in-st
  main-is: Main.hs
  other-modules:
      Paths_parallelize_computation_of_mutable_vector_in_st
  hs-source-dirs:     app
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -O2
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
  build-depends:      base
                    , parallelize-computation-of-mutable-vector-in-st
  default-language: Haskell2010


benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
                       -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , parallelize-computation-of-mutable-vector-in-st
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/parallelize-computation-of-mutable-vector-in-st
