name:                why-parallelizing-this-code-yeilds-almost-no-performance-improvement-on-six-core
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/why-parallelizing-this-code-yeilds-almost-no-performance-improvement-on-six-core#readme>
homepage:            https://github.com/lehins/why-parallelizing-this-code-yeilds-almost-no-performance-improvement-on-six-core
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2023 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.4
                   , GHC == 9.4.4

library
  hs-source-dirs:      src
  exposed-modules:     Lib

  other-modules:
  build-depends:       base >= 4.8 && < 5
                     , vector
                     , parallel
                     , trifecta
                     , deepseq

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints


executable sudoku
  main-is: Main.hs
  other-modules:
      Paths_why_parallelizing_this_code_yeilds_almost_no_performance_improvement_on_six_core
  hs-source-dirs:     app
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -O2
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N1
  build-depends:      base
                    , async
                    , parallel
                    , deepseq
                    , why-parallelizing-this-code-yeilds-almost-no-performance-improvement-on-six-core
  default-language: Haskell2010


benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
                       -with-rtsopts=-N6
  build-depends:       base
                     , criterion
                     , why-parallelizing-this-code-yeilds-almost-no-performance-improvement-on-six-core
                     , parallel
                     , unliftio
                     , deepseq
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/why-parallelizing-this-code-yeilds-almost-no-performance-improvement-on-six-core
